--- a/app/assets/stylesheets/likes.scss
+++ b/app/assets/stylesheets/likes.scss
@@ -52,6 +52,7 @@
     margin-left: -7px;
     margin-top: 5px;
     font-size: 1rem;
+    position: relative;
 }
 
 .likes-count > img {
@@ -59,6 +60,31 @@
     margin-left: 30px;
     margin-right: 7px;
 }
+
+.hidden-likes {
+    width: fit-content;
+    height: 30px;
+    color: white;
+    background-color: black;
+    border: 1px solid black;
+    border-radius: 3.5px;
+    text-align: center;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+    padding: 2px 7px;
+    position: absolute;
+    z-index: 1000;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -26px;
+}
+
+.likes-count:hover .hidden-likes {
+    display: flex;
+}
+
 .comments-count {
     display: flex;
     flex-direction: row;
@@ -66,6 +92,29 @@
     margin-left: -7px;
     margin-top: 5px;
     font-size: 1rem;
+}
+
+.hidden-comments {
+    width: fit-content;
+    height: 30px;
+    color: white;
+    background-color: black;
+    border: 1px solid black;
+    border-radius: 3.5px;
+    text-align: center;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+    padding: 2px 7px;
+    position: absolute;
+    z-index: 1000;
+    bottom: -1.5%;
+    margin-left: -7px;
+}
+
+.comments-count:hover .hidden-comments {
+    display: flex;
 }
 
 .comments-count > img {
