--- a/app/assets/stylesheets/likes.scss
+++ b/app/assets/stylesheets/likes.scss
@@ -34,6 +34,31 @@
     margin-left: -7px;
     margin-top: 5px;
     font-size: 1rem;
+    position: relative;
+}
+
+.hidden-views {
+    width: fit-content;
+    height: 30px;
+    color: white;
+    background-color: black;
+    border: 1px solid black;
+    border-radius: 3.5px;
+    text-align: center;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+    padding: 2px 7px;
+    position: absolute;
+    z-index: 1000;
+    bottom: 107%;
+    left: 50%;
+    margin-left: -30px;
+}
+
+.play-count:hover .hidden-views {
+    display: flex;
 }
 
 .video-info {
@@ -76,7 +101,7 @@
     padding: 2px 7px;
     position: absolute;
     z-index: 1000;
-    bottom: 100%;
+    bottom: 107%;
     left: 50%;
     margin-left: -18px;
 }
@@ -109,7 +134,7 @@
     padding: 2px 7px;
     position: absolute;
     z-index: 1000;
-    bottom: -1.5%;
+    bottom: -12.5%;
 }
 
 .comments-count:hover .hidden-comments {
