--- a/app/assets/stylesheets/home_nav.css
+++ b/app/assets/stylesheets/home_nav.css
@@ -55,6 +55,18 @@
     cursor: pointer;
     text-decoration: none;
     align-self: center;
+    margin-top: -1px;
+}
+
+@media only screen and (max-width: 830px ) {
+    .loggedin-watch {
+        margin-left: 0;
+        margin-top: -1px;
+     }
+
+    .loggedin-manage {
+        margin-left: 0;
+    } 
 }
 
 .nav-new-video {
