--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -144,6 +144,7 @@ div.video-page-container {
     display: inline-flex;
     margin: 25px;
     align-self: start;
+    /* margin-left: 282px; */
     margin-left: 60px;
     
 }
@@ -219,6 +220,11 @@ div.video-page-container {
 
 .carousel {
     background: linear-gradient(to right, white, transparent 90%);
+}
+
+#home-ul {
+    /* position: absolute;
+    left: 228px; */
 }
 
 
